--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,7 +16,7 @@ body{
     overflow-y: scroll;
 }
 
-$con-pad: 15px;
+$con-pad: 22px;
 
 @function con-size($w) {
     @return $w + ($con-pad * 2);
@@ -72,6 +72,9 @@ $con-pad: 15px;
 }
 
 .header{
+    &__inner{
+        position: relative;
+    }
     &__logo{
         width: 13.4%;
         min-width: 140px;
@@ -96,10 +99,10 @@ $con-pad: 15px;
         padding: 44px 0 26px 0;
         @media (max-width: 992px) {
             flex-wrap: wrap;
-            padding-bottom: 0px;
         }
         @media (max-width: 768px) {
             padding-top: 29px;
+            padding-bottom: 0px;
         }
     }
     &__search{
@@ -107,11 +110,19 @@ $con-pad: 15px;
         flex: 1;
         margin: 0 35px 0 22px;
         @media (max-width: 992px) {
+            position: absolute;
+            right: 0px;
+            z-index: 10;
+            bottom: 0px;
+            margin: 0;
+            width: 80%;
+        }
+        @media (max-width: 768px) {
             order: 4;
-            width: 100%;
-            margin: 0px;
             flex: auto;
-            margin: 20px 0;
+            width: 100%;
+            margin: 21px 0;
+            position: relative;
         }
         @media (max-width: 576px) {
             margin: 21px 0 12px 0;
@@ -326,7 +337,7 @@ $con-pad: 15px;
     flex-shrink: 0;
     margin-right: 1.4%;
     @media (max-width: 992px) {
-        width: 100%;
+        width: 18%;
     }
     @media (max-width: 768px) {
         width: 100%;
@@ -428,11 +439,20 @@ $con-pad: 15px;
         }
         & + &{
             margin-top: 13px;
+            @media (max-width: 992px) {
+                margin-top: 6px;
+            }
         }
         &-text{
             color: black;
             font-size: 16px;
             line-height: em(16px, 20px);
+            @media (max-width: 992px) {
+                font-size: 14px;
+            }
+            @media (max-width: 576px) {
+                font-size: 12px;
+            }
 
         }
         &-link{
@@ -469,6 +489,10 @@ $con-pad: 15px;
         overflow: auto;
         @media (max-width: 768px) {
             max-height: none;
+            padding: 11px 15px 11px 15px;
+        }
+        @media (max-width: 576px) {
+            padding: 5px 0px 12px 0;
         }
         .mCSB_outside+.mCSB_scrollTools{
             right: -10px;
@@ -482,6 +506,7 @@ $con-pad: 15px;
         z-index: 10;
         min-width: 300px;
         @media (max-width: 768px) {
+            max-width: 420px;
             width: 100%;
             min-width: auto;
             transition: transform 0.5s;
@@ -494,6 +519,9 @@ $con-pad: 15px;
                 opacity: 0;
                 z-index: -1000;
             }
+        }
+        @media (max-width: 576px) {
+            max-width: none;
         }
     }
     &__tabs-wrap{
@@ -525,10 +553,22 @@ $con-pad: 15px;
         left: 0px;
         top: 0px;
         opacity: 0;
+        @media (max-width: 992px) {
+            padding: 18px 35px 18px 35px;
+        }
+        @media (max-width: 768px) {
+            padding: 11px 16px 21px 16px;
+            max-width: 420px;
+        }
+        @media (max-width: 576px) {
+            max-width: none;
+        }
         &-back{
             display: none;
             @media (max-width: 768px) {
                 display: block;
+                position: relative;
+                top: -2px;
                 width: 24px;
                 height: 24px;
                 fill: black;
@@ -545,9 +585,26 @@ $con-pad: 15px;
         }
         &-head{
             margin-bottom: 20px;
+            @media (max-width: 992px) {
+                margin-bottom: 17px;
+            }
             @media (max-width: 768px) {
                 display: flex;
                 align-items: center;
+            }
+        }
+        &-title{
+            font-size: 40px;
+            color: black;
+            
+            @media (max-width: 992px) {
+                font-size: 35px;
+            }
+            @media (max-width: 768px) {
+                font-size: 21px;
+            }
+            @media (max-width: 576px) {
+                font-size: 18px;
             }
         }
     }
@@ -563,12 +620,21 @@ $con-pad: 15px;
         }
         &-item + &-item{
             margin-top: 15px;
+            @media (max-width: 992px) {
+                margin-top: 17px;
+            }
         }
         &-link{
             color: black;
             font-size: 16px;
             line-height: em(16px, 22px);
             transition: all 0.2s;
+            @media (max-width: 992px) {
+                font-size: 14px;
+            }
+            @media (max-width: 576px) {
+                font-size: 12px;
+            }
         }
         &-link:hover{
             text-decoration: underline;
@@ -578,8 +644,17 @@ $con-pad: 15px;
 
 .content-title{
     font-size: 40px;
-    line-height: 1em;
+    line-height: em(18px, 24px);
     color: black;
+    @media (max-width: 992px) {
+        font-size: 32px;
+    }
+    @media (max-width: 768px) {
+        font-size: 25px;
+    }
+    @media (max-width: 576px) {
+        font-size: 18px;
+    }
 }
 
 .logo{
