--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -373,7 +373,11 @@ $con-pad: 22px;
         color: white;
         background-color: $brand-color-dark;
         border-radius: 4px;
+        transition: all 0.2s;
         cursor: pointer;
+        &:hover{
+            background-color: lighten($brand-color-dark, 7%);
+        }
     }
     &__btn-icon{
         width: 16px;
