--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -883,6 +883,9 @@ $con-pad: 22px;
 
 .item-slider{
     position: relative;
+    .slick-dotted.slick-slider{
+        margin-bottom: 0px;
+    }
     &__arrow{
         width: 45px;
         height: 45px;
@@ -921,11 +924,50 @@ $con-pad: 22px;
         fill: black;
         transition: all 0.2s;
     }
+    &__dots{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        button{
+            font-size: 0px;
+            border: 0px;
+            padding: 0;
+            margin: 0px;
+            background-color: #C0C0C0;
+            border-radius: 500px;
+            display: block;
+            width: 100%;
+            height: 100%;
+            
+        }
+        li{
+            margin: 0 7.5px;
+            height: 10px;
+            width: 10px;
+            @media (max-width: 576px) {
+                margin: 0 3.5px;
+                height: 5px;
+                width: 5px;
+            }
+        }
+        li.slick-active button{
+            background-color: $brand-color;
+        }
+    }
 }
 
 .categories{
     overflow: hidden;
     padding: 70px 0;
+    @media (max-width: 992px) {
+        padding: 55px 0;
+    }
+    @media (max-width: 768px) {
+        padding: 55px 0 45px 0;
+    }
+    @media (max-width: 576px) {
+        padding: 30px 0 22px 0;
+    }
     &__slider{
         margin: 0 -15px;
         @media (max-width: 1200px) {
@@ -1021,10 +1063,22 @@ $con-pad: 22px;
     }
     &__title{
         margin-bottom: 35px;
+        @media (max-width: 992px) {
+            margin-bottom: 25px;
+        }
+        @media (max-width: 576px) {
+            margin-bottom: 20px;
+        }
     }
     &__slider-prev, &__slider-next{
         @media (max-width: 767px) {
             display: none;
+        }
+    }
+    &__slider-dots{
+        margin-top: 30px;
+        @media (max-width: 576px) {
+            margin-top: 15px;
         }
     }
 }
